# PracticalML-Spring-2024

./: README.md
notebooks/: pytorch_intro.ipynb
notebooks/Practicum 1/: README.md  best_model.pth  pyproject.toml  pytorch_intro.ipynb
slides/: introduction.pptx
